# m3u8-parse-sort

./: .gitignore  Cargo.toml  README.md  sorted_playlist.m3u8
.github/workflows/: rust-ci.yml
src/: errors.rs  fetch.rs  lib.rs  main.rs  parser.rs  sort.rs
tests/data/: chaos_parse_test.m3u8  expected_chaos_parse_test.m3u8  expected_sorted_by_audio_then_bandwidth.m3u8  expected_sorted_by_resolution_then_average_bandwidth.m3u8  master_unenc_hdr10_all.m3u8  parse_test.m3u8
